- fare shown per guest in italic - view all excursion fix hover - lb suite deck plan width 700 - remove fare shown per guest on mobile - decrease speed tab scroll - restaurant name not capital - increase font size lb suite plan

--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/included/lightboxes/lightbox-suite/clientlibs/files/lightbox-suite.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/included/lightboxes/lightbox-suite/clientlibs/files/lightbox-suite.less
@@ -628,7 +628,7 @@
         margin: auto;
       }
       .lg-suite-deck-label {
-        font-size: 12px;
+        font-size: 13px;
         letter-spacing: 1px;
         line-height: 18px;
         margin-top: 0px;
