--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/itineraryexcursions/itinerary.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/itineraryexcursions/itinerary.less
@@ -80,6 +80,10 @@
     text-align: center;
     margin-bottom: 30px;
     margin-top: 25px;
+
+    &:hover {
+      background-color: transparent;
+    }
   }
   .cruise-2018-itineraries-itinerary-row {
     width: 100%;
