--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/overview.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/overview.less
@@ -265,6 +265,7 @@
     line-height: 18px;
     margin-top: 25px;
     text-align: left;
+    font-style: italic;
   }
 }
 
@@ -381,6 +382,7 @@
       line-height: 11px;
       letter-spacing: 1px;
       margin-bottom: 30px;
+      display: none;
     }
     .ow-slider {
       visibility: hidden;
