--- a/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/ship/dining.less
+++ b/silversea-com-ui/jcr_root/apps/silversea/silversea-com/components/pages/cruise2018/clientlibs/less/ship/dining.less
@@ -87,7 +87,6 @@
       height: 100%;
     }
     .cruise-2018-ship-dining-area-slide-title {
-      text-transform: uppercase;
       color: @grey--3;
       font-family: @freight;
       font-size: 18px;
